2003-08-10 Jens Tkotz  <jens@peino.de> 1.3.5-cvs-b111

	* Changed text in config_data.inc which caused error in config
	  wizard when php has no gettext support. Quotes (") and backslashes
	  (\) shouldn' t be used in _() calls.  Instead, use &quot; and &#92
	  respectively.

	* Changed "Next XX" and "Prev XX" buttons in captionator.php to use
	  sprintf since not all languages have the numbers at the end.

	* Added po analyzer / report tool for po files.
	  Call it via http://path_to/gallery/tools/g1-report.php.

	* Updated gallery.pot, German and French translations and synced all
	  languages.

	* Changed initLanguage() to emulate _() only if php has no gettext support.

	* Tweaked diagnostics page, check_netpbm, check_imagemagick and session_test:
	  1.) They now call initLanguage and are now translated.
	  2.) Added error messages in check_netpbm and check_imagemagick if
	      config.php is missing.

2003-08-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b110

	* Jens' one word fix so language setting now holds when you click
	  a link.  Bug introduced in b103

2003-08-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b109

	* Fixed longstanding bug in resize_photo.php, where font tag was never 
	  closed.

	* In ml_pulldown.inc, check if a language actually exists currently 
	  before adding it to the pulldown.

	* In util.php, reformatted initLanguage() and added new
	  function language_exists(), which tests to see if the
	  appropriate translation file for a language is present.

	* Added '".."' to setup/constants.inc to remove warning.

	* Removed warning from setup/write.inc.

	* Language check in Configuration Wizard now compares the number of 
	  languages available with the actual number in this installation.

	* Parameter added to po_filename(), so it can test of existance of 
	  po files for other languages.

	* Renamed check_gallery_locale() to check_gallery_languages().
