@@ -1,3 +1,10 @@
+2003-08-10  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b112
+
+        * Fix problems with international characters.  While *Gallery* supported
+          international chars fine, some browsers didn't like that they were not
+          URL encoded.  So, all album and photo names are now URL encoded.  This
+          has been tested and verified to work on IE, Mozilla, and Opera.
+        
 2003-08-10 Jens Tkotz  <jens@peino.de> 1.3.5-cvs-b111
 
 	* Changed text in config_data.inc which caused error in config
